Remove ZIP & Tar download links

--- a/index.html
+++ b/index.html
@@ -29,8 +29,6 @@
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/bennuttall/scratch_gpio/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/bennuttall/scratch_gpio/zipball/master" class="download-button zip"><span>Download</span></a>
           <a href="https://github.com/bennuttall/scratch_gpio" class="code">View Scratch gpio on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
@@ -71,7 +69,7 @@
   </div>
   <div class="current-section">
     <a href="#top">Scroll to top</a>
-    <a href="https://github.com/bennuttall/scratch_gpio/tarball/master" class="tar">tar</a><a href="https://github.com/bennuttall/scratch_gpio/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <a href="" class="code">source code</a>
     <p class="name"></p>
   </div>
 
