--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
     </div>
     <footer>
       <div class="owner">
-      <p><a href="https://github.com/cymplecy" class="avatar"><img src="https://pbs.twimg.com/profile_images/1413005809/pencil.png" width="48" height="48"/></a> <a href="https://github.com/cymplecy">cymplecy</a> maintains <a href="https://github.com/cymplecy/scratch_gpio">Scratch GPIOb</a></p>
-
-
+          <p><a href="https://github.com/cymplecy" class="avatar"><img src="https://pbs.twimg.com/profile_images/1413005809/pencil.png" width="48" height="48"/></a> <a href="https://github.com/cymplecy">cymplecy</a> maintains <a href="https://github.com/cymplecy/scratch_gpio">Scratch GPIO</a></p>
       </div>
       <div class="creds">
         <small>This page generated using <a href="http://pages.github.com/">GitHub Pages</a><br/>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
