--- a/index.html
+++ b/index.html
@@ -1,77 +1,73 @@
 <!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>ScratchGPIO by cymplecy</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/main.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/>
-  <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+  </head>
+  <body>
 
-  <title>Scratch gpio</title>
-  <meta name="description" content="Code for scratch_gpio_handler">
+      <header>
+        <h1>ScratchGPIO</h1>
+        <p>Code for scratch_gpio_handler</p>
+      </header>
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+      <div id="banner">
+        <span id="logo"></span>
 
-</head>
-
-<body>
-
-  <div class="wrapper">
-    <header>
-      <h1 class="title">Scratch gpio</h1>
-    </header>
-    <div id="container">
-      <p class="tagline">Code for scratch_gpio_handler</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/cymplecy/scratch_gpio" class="code">View Scratch gpio on GitHub</a>
+        <a href="https://github.com/cymplecy/scratch_gpio" class="button fork"><strong>View On GitHub</strong></a>
+        <div class="downloads">
+          <span>Downloads:</span>
+          <ul>
+            <li><a href="https://github.com/cymplecy/scratch_gpio/zipball/master" class="button">ZIP</a></li>
+            <li><a href="https://github.com/cymplecy/scratch_gpio/tarball/master" class="button">TAR</a></li>
+          </ul>
         </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h1>
+      </div><!-- end banner -->
+
+    <div class="wrapper">
+      <nav>
+        <ul></ul>
+      </nav>
+      <section>
+        <h1>
 <a name="scratch-gpio" class="anchor" href="#scratch-gpio"><span class="octicon octicon-link"></span></a>Scratch GPIO</h1>
 
 <p>This script allows you to control the GPIO pins on the Raspberry Pi from Scratch</p>
 
 <h2>
-<a name="how-to-install-scratch-gpio" class="anchor" href="#how-to-install-scratch-gpio"><span class="octicon octicon-link"></span></a>How to install Scratch GPIO</h2>
+<a name="how-to-install-scratchgpio" class="anchor" href="#how-to-install-scratchgpio"><span class="octicon octicon-link"></span></a>How to install ScratchGPIO</h2>
 
 <p>Your Raspberry Pi needs to be connected to the internet to install the software but not needed to run ScratchGPIO. Copy the text below ( left click just before the s of sudo and drag right until all the text in the line as been selected) then right-click and select copy. Open up an LX Terminal window and select Edit and the Paste that into an LX Terminal window and run it to download the installer.</p>
 
-<pre><code>sudo wget http://goo.gl/dANpKr -O isgh.sh
+<pre><code>sudo wget http://goo.gl/Pthh62 -O isgh5.sh
 </code></pre>
 
 <p>Once the installer has been downloaded then just type (or copy and paste the text below as before)</p>
 
-<pre><code>sudo bash isgh.sh
+<pre><code>sudo bash isgh5.sh
 </code></pre>
 
-<p>(If logged in as a different user to standard pi, then  type sudo bash install_scratchgpio3.sh yourusername) This will install all the necessary extra software and some simple examples. (If you do not have internet on your Pi then, put your SD card into a card reader and try using your browser to right-click and save the script direct to your SD card and then put it back into you Pi and run the second instruction)</p>
-        </article>
-      </div>
-    </div>
-    <footer>
-      <div class="owner">
-          <p><a href="https://github.com/cymplecy" class="avatar"><img src="https://pbs.twimg.com/profile_images/1413005809/pencil.png" width="48" height="48"/></a> <a href="https://github.com/cymplecy">cymplecy</a> maintains <a href="https://github.com/cymplecy/scratch_gpio">Scratch GPIO</a></p>
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="http://pages.github.com/">GitHub Pages</a><br/>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
+<p>The installer will create 2 desktop icons – ScratchGPIO5 which is used for beginners using simple circuits and ScratchGPIO 5Plus which is used with specific add-on boards.</p>
 
-            <script type="text/javascript">
+<p>Full details <a href="http://cymplecy.wordpress.com/scratchgpio/scratch-raspberrypi-gpio/">here</a></p>
+      </section>
+      <footer>
+        <p>Project maintained by <a href="https://github.com/cymplecy">cymplecy</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
+      </footer>
+    </div>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+              <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
           </script>
@@ -82,5 +78,5 @@
             } catch(err) {}
           </script>
 
-</body>
+  </body>
 </html>
