Add --no-check-certificate flag to wget
This solves a common problem with wget on the Pi

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <p>Your Raspberry Pi needs to be connected to the internet to install the software but not needed to run ScratchGPIO. Copy the text below ( left click just before the s of sudo and drag right until all the text in the line as been selected) then right-click and select copy. Open up an LX Terminal window and select Edit and the Paste that into an LX Terminal window and run it to download the installer.</p>
 
-<pre><code>sudo wget http://goo.gl/Pthh62 -O isgh5.sh
+<pre><code>sudo wget http://goo.gl/Pthh62 -O isgh5.sh --no-check-certificate
 </code></pre>
 
 <p>Once the installer has been downloaded then just type (or copy and paste the text below as before)</p>
