Change subtitle from code to purpose

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <header>
         <h1>ScratchGPIO</h1>
-        <p>Code for scratch_gpio_handler</p>
+        <p>Control GPIO on the Raspberry Pi directly from Scratch programs</p>
       </header>
 
       <div id="banner">
